maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: missing arguments for method aBiscuit in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
      if (aBiscuit==true){posBaggle=(j,i)}
          ^JediEscaper:6: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
      if (aBiscuit==true){posBaggle=(j,i)}
                                    ^